# C-Algo-Structures

./: .gitignore  README.md
Algorithms/KDZ/: AlgoHelper.h  CMakeLists.txt  ConstValues.h  Debugger.h  EdmondsKarp.h  EfimDinitz.h  FordFulkerson.h  ReadWriter.h  main.cpp
Algorithms/Week 1/Counting Sort/: CMakeLists.txt  main.cpp
Algorithms/Week 1/Radix Sort/: CMakeLists.txt  main.cpp
Algorithms/Week 11/DamerauLevenshtein/: CMakeLists.txt  main.cpp
Algorithms/Week 11/LevenshteinDistance/: CMakeLists.txt  main.cpp
Algorithms/Week 11/Wagner_Fisher/: CMakeLists.txt  main.cpp
Algorithms/Week 12/RiverTask/: CMakeLists.txt  main.cpp
Algorithms/Week 12/RocksTask/: CMakeLists.txt  main.cpp
Algorithms/Week 12/SubstringLengthTask/: CMakeLists.txt  main.cpp
Algorithms/Week 12/SubstringSearchTask/: CMakeLists.txt  main.cpp
Algorithms/Week 13/Backpack 1/: CMakeLists.txt  main.cpp
Algorithms/Week 13/Backpack 2/: CMakeLists.txt  main.cpp
Algorithms/Week 13/Elevator Task/: CMakeLists.txt  main.cpp
Algorithms/Week 13/Greedy Backpack/: CMakeLists.txt  main.cpp
Algorithms/Week 13/Lazy Recursion - Knight/: CMakeLists.txt  main.cpp
Algorithms/Week 14/Task 1/: main.cpp
Algorithms/Week 14/Task 2/: CMakeLists.txt  main.cpp
Algorithms/Week 14/Task 3/: CMakeLists.txt  main.cpp
Data Structures/part1-01-point/tests/: CMakeLists.txt  MyOwnTests.cpp  point_array_test.cpp
Data Structures/part1-09-hospitaltrouble/: CMakeLists.txt  main.cpp  parts.cpp  parts.h
Data Structures/part1-12-spellchecking/tests/: CMakeLists.txt  dictionaryTests.cpp  hashSetTests.cpp
(+100 files in other folders)
